# FanzineAPP

./: README.md
backend/: .gitignore  pyproject.toml
backend/api/: controller.py  urls.py
backend/api/controllers/: publication.py  users.py
backend/api/models/: publication.py  user.py
backend/config/: settings.py  urls.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: axios.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/layouts/components/Footer/: index.tsx
frontend/src/layouts/components/Navbar/: index.tsx
frontend/src/pages/Home/: index.tsx
frontend/src/pages/Home/components/Carousel/: index.tsx
frontend/src/pages/Home/components/Flipbook/: index.css  index.tsx
frontend/src/pages/Home/components/PDFDiagnostic/: index.tsx
frontend/src/routes/: index.tsx
frontend/src/services/: fanzine.service.ts  pdfjs-worker.d.ts
